# duplicate-url-discarder-rules

./: .pre-commit-config.yaml  CHANGES.rst  README.rst  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: publish.yml  test.yml
duplicate_url_discarder_rules/: __init__.py
duplicate_url_discarder_rules/normalizer/: main.json
duplicate_url_discarder_rules/queryRemoval/: article.json  main.json  product.json  utm.json
duplicate_url_discarder_rules/queryRemovalExcept/: main.json
duplicate_url_discarder_rules/subpathRemoval/: main.json
tests/: test_query_removal.py  test_query_removal_except.py  test_rules.py
tests/normalizer/: test_normalizer.py
tests/queryRemovalExcept/: test_query_removal_except.py  test_query_removal_except_main.py
tests/subpathRemoval/: test_main.py  test_subpath_removal.py  test_subpath_removal_main.py
