[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "duplicate-url-discarder-rules"
description = "The rules for duplicate-url-discarder."
authors = [{name = "Zyte Group Ltd", email = "info@zyte.com"}]
readme = "README.rst"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: Implementation :: CPython",
]
requires-python = ">=3.8"
dynamic = ["version"]

[tool.setuptools.dynamic]
version = {attr = "duplicate_url_discarder_rules.__version__"}

[project.urls]
Source = "https://github.com/zytedata/duplicate-url-discarder-rules"

[tool.setuptools.package-data]
'duplicate_url_discarder_rules' = ['**/*.json']
